started to implement dropdown section menu

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,7 @@
 
 <div class="ui fixed inverted violet menu">
     <a class="item"><h3>My Documents</h3></a>
+    <div class="ui inverted item"><section-dd></section-dd></div>
     <div class="right menu">
       <div class="item"> <a class="ui button">Log in</a> </div>
     </div>
