partial and somewhat successful implementation of sticky section

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,18 +1,17 @@
 <div class="ui divided list" style="position:relative;top:15px;">
  <!-- LIST OF ROWS -->          
  <div class="item" *ngFor="let line of lines$ | async; let i = index">
+	<!-- GRID WITHIN THE LINE -->
+	<div class="ui divided grid">
 	<!-- SECTION -->
+		<div *ngIf="line.section" class="ui tiny label" style="float:left;">{{("0000" + (i+1)).slice(-4)}}</div> 
 		<i *ngIf="line.section" (click)="addNewRow(i)" class="violet icon pencil" style="cursor:pointer;position:relative;top:-9px;float:right;right:-4px;" ></i>
 		<i *ngIf="line.section" (click)="deleteSection(line.text.line[0].id)" class="violet icon remove" 
 			style="cursor:pointer;position:relative;top:-9px;float:right;right:-4px;"></i>
-		<div class="ui item fourteen wide column" *ngIf="line.section">
-		 <div id="{{line.section.starttextid}}" class="ui fluid input">
-  		  <input type="text" #box (keyup.enter)="updateSection(line.text.line[0].id, box.value)" [value]="line.section.title" >
-		 </div>
-		</div>
-	<!-- GRID WITHIN THE LINE -->
-	<div class="ui divided grid">
+		<section-item *ngIf="line.section" id="{{line.section.starttextid}}" [scrollY]="scrollY" [line]="line" ></section-item>
+	</div>
 	  <!-- COL 0 -->
+	<div class="ui divided grid">
           <div *ngIf="currentEdition==i && currentCol==0; then textareaId0 else markdownId0" > 
 	  </div>
           	<ng-template #textareaId0 > 
