--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
 
+<span id="top-of-page"></span>
+
 <div class="ui active dimmer" *ngIf="loaderService.isLoading()">
     <div class="ui large text loader">
 		Please wait while setting your session...
